Add testing notebooks and models

--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +54,9 @@
     }
    ],
    "source": [
-    "# load MNIST data\n",
-    "mnist = tf.keras.datasets.mnist\n",
-    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "# load FASHION MNIST data\n",
+    "fmnist = tf.keras.datasets.fashion_mnist\n",
+    "(x_train, y_train), (x_test, y_test) = fmnist.load_data()\n",
     "\n",
     "# add channel dim\n",
     "x_train, x_test = x_train[..., np.newaxis], x_test[..., np.newaxis]\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,40 +132,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [ 
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading trained model from assets/nn-model.hdf5.\n",
-      "50000/50000 [==============================] - 5s 109us/sample - loss: 0.0035 - acc: 0.9990\n",
-      "accuracy: 99.90% | loss: 0.0035318445157307087\n"
-     ]
-    }
-   ],
-   "source": [
-    "nn = ConvNet(img_rows, img_cols, img_chans, n_classes)\n",
-    "nn.maybe_train(data_train=(x_train, y_train),\n",
-    "               data_valid=(x_valid, y_valid),\n",
-    "               batch_size=16, epochs=12)\n",
-    "nn.evaluate(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 1s 82us/sample - loss: 0.0398 - acc: 0.9917\n",
-      "accuracy: 99.17% | loss: 0.03984029801291636\n",
-      "10000/10000 [==============================] - 1s 79us/sample - loss: 0.0312 - acc: 0.9906\n",
-      "accuracy: 99.06% | loss: 0.031152764364513974\n"
+      "No checkpoint found on assets/model_4_x_32_dense.hdf5. Training from scratch.\n",
+      "Train on 50000 samples, validate on 10000 samples\n",
+      "Epoch 1/12\n",
+      "50000/50000 [==============================] - 111s 2ms/sample - loss: 0.5181 - acc: 0.8195 - val_loss: 0.3241 - val_acc: 0.8816\n",
+      "Epoch 2/12\n",
+      "50000/50000 [==============================] - 115s 2ms/sample - loss: 0.3239 - acc: 0.8861 - val_loss: 0.2700 - val_acc: 0.9005\n",
+      "Epoch 3/12\n",
+      "50000/50000 [==============================] - 118s 2ms/sample - loss: 0.2693 - acc: 0.9038 - val_loss: 0.2447 - val_acc: 0.9084\n",
+      "Epoch 4/12\n",
+      "50000/50000 [==============================] - 123s 2ms/sample - loss: 0.2317 - acc: 0.9162 - val_loss: 0.2312 - val_acc: 0.9150\n",
+      "Epoch 5/12\n",
+      "50000/50000 [==============================] - 118s 2ms/sample - loss: 0.1995 - acc: 0.9278 - val_loss: 0.2246 - val_acc: 0.9190\n",
+      "Epoch 6/12\n",
+      "50000/50000 [==============================] - 120s 2ms/sample - loss: 0.1744 - acc: 0.9369 - val_loss: 0.2114 - val_acc: 0.9239\n",
+      "Epoch 7/12\n",
+      "50000/50000 [==============================] - 117s 2ms/sample - loss: 0.1549 - acc: 0.9435 - val_loss: 0.2170 - val_acc: 0.9239\n",
+      "Epoch 00007: early stopping\n",
+      "Saving trained model to assets/model_4_x_32_dense.hdf5.\n",
+      "50000/50000 [==============================] - 20s 407us/sample - loss: 0.1008 - acc: 0.9647\n",
+      "accuracy: 96.47% | loss: 0.10080578138634562\n"
+     ]
+    }
+   ],
+   "source": [
+    "es = EarlyStopping(monitor='val_acc', verbose=1)\n",
+    "\n",
+    "nn = ConvNet(img_rows, img_cols, img_chans, n_classes)\n",
+    "nn.maybe_train(data_train=(x_train, y_train),\n",
+    "               data_valid=(x_valid, y_valid),\n",
+    "               batch_size=16, epochs=12, callbacks=[es], model_name='model_4_x_32_dense')\n",
+    "nn.evaluate(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_2 (InputLayer)         [(None, 28, 28, 1)]       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 26, 26, 32)        320       \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 24, 24, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 12, 12, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 12, 12, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 9216)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 128)               1179776   \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 128)               16512     \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_5 (Dense)              (None, 10)                1290      \n",
+      "=================================================================\n",
+      "Total params: 1,216,394\n",
+      "Trainable params: 1,216,394\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn.model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 4s 423us/sample - loss: 0.2170 - acc: 0.9239\n",
+      "accuracy: 92.39% | loss: 0.2170466972410679\n",
+      "10000/10000 [==============================] - 4s 407us/sample - loss: 0.2383 - acc: 0.9196\n",
+      "accuracy: 91.96% | loss: 0.23830484780669212\n"
      ]
     }
    ],
@@ -940,9 +1003,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf1gpu",
+   "display_name": "distill-nn-tree-LSteMpmA",
    "language": "python",
-   "name": "tf1gpu"
+   "name": "distill-nn-tree-lstempma"
   },
   "language_info": {
    "codemirror_mode": {
@@ -954,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.9"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
